# mojian

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  TODO.md  pyproject.toml  skills-lock.json
bazibase/: __init__.py  arbitration.py  changsheng.py  chart.py  cli.py  constants.py  diagnosis.py  dst.py  engine.py  luck.py  pillars.py  solar_time.py  strength.py  ten_gods.py  timeline.py
bazibase/rules/: __init__.py  fortune.py  ge_ju.py  ge_ju_cheng_bai.py  interactions.py  schema.py  xiang_shen.py  yong_shen.py
deploy/: Caddyfile  DEPLOY.md  caddy-httpC.snippet  env.production.example  kairos.service  update.sh
docs/: ARCHITECTURE.md  PROGRESS.md
examples/: README.md  deepseek_runner.py  sample_charts.json
tests/: conftest.py  test_agent_conversations.py  test_arbitration.py  test_asr.py  test_auth_migration.py  test_chart.py  test_cli.py  test_constants.py  test_context.py  test_dst.py  test_dst_check.py  test_engine.py  test_extractor.py  test_feedback.py  test_followups.py  test_fortune.py  test_framing.py  test_ge_ju.py  test_ge_ju_cheng_bai.py  test_grounding_sanitize.py  test_hooks.py  test_interactions.py  test_known_charts.py  test_llm_gateway.py  test_llm_trace.py  test_luck.py  test_memory.py  test_memory_text.py  test_pillars.py  test_prompt_registry.py  test_retrieval.py  test_router.py  test_solar_time.py  test_stability.py  test_strength.py  test_ten_gods.py  test_timeline.py  test_tools_cache.py  test_topics.py  test_xiang_shen.py  (+1 more)
web/: .env.example  Caddyfile  DEPLOY.md  design-prototype.html  requirements.txt
web/backend/: auth.py  (+5 more)
(+159 files in other folders)
